Committing Database Scripts

--- a/apache-tomcat-9.0.78/webapps/helloservlet/index.html
+++ b/apache-tomcat-9.0.78/webapps/helloservlet/index.html
@@ -6,7 +6,7 @@
   <h2>Flowershop</h2>
   <form method="get" action="query">
     Choose a flower type:<br /><br />
-    <input type="checkbox" name="type" value="Roses" />Roses
+    <input type="checkbox" name="type" value="Roses" />Not Rose
     <input type="checkbox" name="type" value="Tulips" />Tulips
     <input type="checkbox" name="type" value="Orchids" />Orchids
     <input type="checkbox" name="type" value="Lilies" />Lilies
